# Inovesa

./: .codedocs  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile  InovesaConfig.hpp.in  README.md  default.cfg  example.cfg  gpl-header.txt  license-header-template.txt
.github/workflows/: build-test.yaml  codeql.yml  msvc.yml  unit-tests.yaml
cmake/: FindFFTW.cmake  FindGLFW.cmake  FindGLM.cmake  FindGSL.cmake  FindOpenCL.cmake  FindOpenImageIO.cmake  FindPNG++.cmake
examples/: impedance-01.txt  nowake.txt  particles-line127.txt  track.txt  wake-16-512.txt  wake-5-256.txt  wake.txt
gl/: 2DL_gl2.fragmentshader  2DL_gl2.vertexshader  2DL_gl3.fragmentshader  2DL_gl3.vertexshader  3DCM_gl2.fragmentshader  3DCM_gl2.vertexshader  3DCM_gl3.fragmentshader  3DCM_gl3.vertexshader  gl2.fragmentshader  gl2.vertexshader  gl3.fragmentshader  gl3.vertexshader
inc/: Array.h  Display.hpp  ElectricField.hpp  FFTWWrapper.hpp  HelperFunctions.hpp  Impedance.hpp  Mesh2D.hpp  MessageStrings.hpp  PhaseSpace.hpp  Ruler.hpp  Share.hpp  defines.hpp  fixed_point.h  main.hpp
inc/CL/: CLProfiler.hpp  CLProgApplyHM.hpp  CLProgRotateKick.hpp  CLProgs.hpp  OpenCLHandler.hpp  local_cl.hpp
inc/HM/: DriftMap.hpp  FokkerPlanckMap.hpp  HeritageMap.hpp  Identity.hpp  KickMap.hpp  RFKickMap.hpp  RotationMap.hpp  WakeFunctionMap.hpp  WakeImpedanceMap.hpp  WakeKickMap.hpp  WakePotentialMap.hpp
inc/IO/: Display.hpp  FSPath.hpp  HDF5File.hpp  ProgramOptions.hpp
inc/IO/GUI/: GUIElement.hpp  Plot1DLine.hpp  Plot2D.hpp  Plot2DLine.hpp  Plot2DPoints.hpp  Plot2DPrimitive.hpp  Plot3DColormap.hpp  Plot3DLine.hpp
inc/PS/: ElectricField.hpp  PhaseSpace.hpp  PhaseSpaceFactory.hpp  Ruler.hpp
inc/SM/: DriftMap.hpp  DynamicRFKickMap.hpp  FokkerPlanckMap.hpp  Identity.hpp  KickMap.hpp  RFKickMap.hpp  RotationMap.hpp  SourceMap.hpp  WakeFunctionMap.hpp  WakeKickMap.hpp  WakePotentialMap.hpp
inc/Z/: CollimatorImpedance.hpp  ConstImpedance.hpp  FreeSpaceCSR.hpp  Impedance.hpp  ImpedanceFactory.hpp  ParallelPlatesCSR.hpp  ResistiveWall.hpp
inc/arrayclass/: Array.h  NDArray.hpp
inc/impedances/: FreeSpaceCSR.hpp  Impedance.hpp  ParallelPlatesCSR.hpp
misc/: inovesa.desktop
scripts/: colormaps.py  ino_spectrogram.py  plot-hdf5.py
src/: Display.cpp  ElectricField.cpp  FFTWWrapper.cpp  HelperFunctions.cpp  Impedance.cpp  MessageStrings.cpp  PhaseSpace.cpp  Share.cpp  defines.cpp  main.cpp
src/CL/: CLProfiler.cpp  CLProgApplyHM.cpp  CLProgRotateKick.cpp  CLProgs.cpp  OpenCLHandler.cpp
src/HM/: DriftMap.cpp  FokkerPlanckMap.cpp  HeritageMap.cpp  KickMap.cpp  RFKickMap.cpp  RotationMap.cpp  WakeFunctionMap.cpp  WakeImpedanceMap.cpp  WakeKickMap.cpp  WakePotentialMap.cpp
src/IO/: Display.cpp  FSPath.cpp  HDF5File.cpp  ProgramOptions.cpp
src/IO/GUI/: GUIElement.cpp  Plot1DLine.cpp  Plot2D.cpp  Plot2DLine.cpp  Plot2DPoints.cpp  Plot2DPrimitive.cpp  Plot3DColormap.cpp  Plot3DLine.cpp
src/PS/: ElectricField.cpp  PhaseSpace.cpp  PhaseSpaceFactory.cpp
src/SM/: DriftMap.cpp  DynamicRFKickMap.cpp  FokkerPlanckMap.cpp  Identity.cpp  KickMap.cpp  RFKickMap.cpp  RotationMap.cpp  SourceMap.cpp  WakeFunctionMap.cpp  WakeKickMap.cpp  WakePotentialMap.cpp
src/Z/: CollimatorImpedance.cpp  ConstImpedance.cpp  FreeSpaceCSR.cpp  Impedance.cpp  ImpedanceFactory.cpp  ParallelPlatesCSR.cpp  ResistiveWall.cpp
src/impedances/: FreeSpaceCSR.cpp  Impedance.cpp  ParallelPlatesCSR.cpp
src/test/: normalize.cpp  share.cpp
test/: TestConstImpedance.cpp  TestDisplay.cpp  TestElectricField.cpp  TestFSPath.cpp  TestHelperFunctions.cpp  TestImpedance.cpp  TestKickMap.cpp  TestMessageStrings.cpp  TestOpenCLHandler.cpp  TestPhaseSpace.cpp  TestRotationMap.cpp  TestRuler.cpp  testrunner.cpp
whatsnew/: v1_0.md  v1_1.md  v1_2.md
